fix(help page): Overlapping anchor

--- a/frontend/scss/pages/_faq.scss
+++ b/frontend/scss/pages/_faq.scss
@@ -85,4 +85,12 @@
   .faq-collapsible {
     display: none;
   }
+  .blue-section
+  {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    z-index: 0;
+    height: 175px;
+  }
 }
